<resources>
    <string name="app_name">SCHOOLMETEOGR</string>
    <string name="tapToClose">Χ Κλείσιμο</string>
    <string name="callSchool">Επικοινωνία:</string>
    <string name="weather">Kαιρός E.M.Y</string>
    <string name="atalanti">ΕΠΑΛ ΑΤΑΛΑΝΤΗΣ</string>
    <string name="karpenisi">ΕΠΑΛ ΚΑΡΠΕΝΗΣΙΟΥ</string>
    <string name="karistos">ΕΠΑΛ ΚΑΡΥΣΤΟΥ</string>
    <string name="kerkira">1 ΕΠΑΛ ΚΕΡΚΥΡΑΣ</string>
    <string name="lamia">1 ΕΠΑΛ ΛΑΜΙΑΣ</string>
    <string name="makrakomi">ΕΠΑΛ ΜΑΚΡΑΚΩΜΗΣ</string>
    <string name="xalkida">2 ΕΠΑΛ ΧΑΛΚΙΔΑΣ</string>
    <string name="dionisos">1 ΕΠΑΛ ΔΙΟΝΥΣΟΥ</string>
    <string name="dimhrakleio">15 ΔΗΜΟΤΙΚΟ ΣΧΟΛΕΙΟ ΗΡΑΚΛΕΙΟΥ</string>
    <string name="thiba">ΕΠΑΛ ΘΗΒΑΣ</string>
    <string name="kesariani">ΕΠΑΛ ΚΑΙΣΑΡΙΑΝΗΣ</string>
    <string name="peiramthesallonikis">ΠΕΙΡΑΜΑΤΙΚΟ ΣΧΟΛΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ</string>
    <string name="nigritas">ΕΠΑΛ ΝΙΓΡΙΤΑΣ</string>
    <string name="atalantiPhone">tel:2233022161</string>
    <string name="karpenisiPhone">tel:2237023130</string>
    <string name="karistosPhone">tel:2224023240</string>
    <string name="kerkiraPhone">tel:2661035211</string>
    <string name="lamiaPhone">tel:2231052893</string>
    <string name="makrakomiPhone">tel:2236022343</string>
    <string name="xalkidaPhone">tel:2221078691</string>
    <string name="dionisosPhone">tel:2310267433</string>
    <string name="dimhrakleioPhone">tel:2810252903</string>
    <string name="thibaPhone">tel:2262027893</string>
    <string name="kesarianiPhone">tel:2107669943</string>
    <string name="peiramthesallonikisPhone">tel:2310267433</string>
    <string name="nigritasPhone">tel:2322020000</string>
    <string name="general">Η συγκεκριμένη εφαρμογή του μετεωρολογικού δικτύου σχολείων της χώρας με την ονομασία SCHOOLMETEOGR, αναπτύχθηκε από το 2ο ΕΠΑΛ Χαλκίδας κατά το σχολικό έτος 2022 -23, στα πλαίσια υλοποίησης της Πράξης «Υποστήριξη και Διαχείριση των Σχεδίων Δράσης του έργου «Μια Νέα Αρχή στα ΕΠΑΛ» μέσω του  Επιχειρησιακού Προγράμματος  «ΑΝΑΠΤΥΞΗ ΑΝΘΡΩΠΙΝΟΥ ΔΥΝΑΜΙΚΟΥ, ΕΚΠΑΙΔΕΥΣΗ ΚΑΙ ΔΙΑ ΒΙΟΥ ΜΑΘΗΣΗ» με τη συγχρηματοδότηση   της Ελλάδας και της Ευρωπαϊκής Ένωσης.
    \n\nΤα μετεωρολογικά δεδομένα και οι εικόνες από τις καιρικές κάμερες (όπου υπάρχουν) αντλούνται άμεσα από τους μετεωρολογικούς σταθμούς των σχολείων του δικτύου.
    \n\nΗ παρούσα εφαρμογή μεταδίδει αυτούσια την ιστοσελίδα της πρόγνωσης της ΕΜΥ.
    </string>
    <string name="atalantiURL">https://www.google.com/maps?client=firefox-b-d&amp;q=38.653456036158786,+22.99719271998704&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwipl86tsrv9AhWNjaQKHauEBigQ_AUoAnoECAEQBA</string>
    <string name="karpenisiURL">https://www.google.com/maps?client=firefox-b-d&amp;q=38.91454545946067,+21.78850553003706&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwiElu_Msrv9AhWH2qQKHd5CAA8Q_AUoAnoECAIQBA</string>
    <string name="karistosURL">https://www.google.com/maps?client=firefox-b-d&amp;q=38.02207991394976,+24.42263701299908&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwjkkLXasrv9AhUrsKQKHQvwC-gQ_AUoAnoECAEQBA</string>
    <string name="kerkiraURL">https://www.google.com/maps?client=firefox-b-d&amp;q=39.6244072151634,+19.91026709786767&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwiBmOH6sbv9AhUrMuwKHbraAL4Q_AUoAnoECAEQBA</string>
    <string name="lamiaURL">https://www.google.com/maps?client=firefox-b-d&amp;q=38.92042606103356,+22.423592718589948&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwiS9ZiEsrv9AhVnMOwKHa35DKUQ_AUoAnoECAEQBA</string>
    <string name="makrakomiURL">https://www.google.com/maps?client=firefox-b-d&amp;q=38.952651702649774,+22.121769579540636&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwjBzM3psrv9AhUssKQKHe0NAZUQ_AUoAnoECAEQBA</string>
    <string name="xalkidaURL">https://www.google.com/maps?client=firefox-b-d&amp;q=38.45807095740107,+23.597087048916933&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwjim9GRsrv9AhWYtKQKHYw4DpYQ_AUoAnoECAEQBA</string>
    <string name="dionisosURL">https://www.google.com/maps?client=firefox-b-d&amp;q=38.122276901851336,+23.864931531423043&amp;dlnr=1&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwi6womer7v9AhVeiP0HHSn_D6kQ_AUoAnoECAEQBA</string>
    <string name="dimhrakleioURL">https://www.google.com/maps?client=firefox-b-d&amp;q=35.3226004214979,+25.125163545979387&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwiZs-ydsrv9AhWLOewKHcjhBxEQ_AUoAnoECAEQBA</string>
    <string name="thibaURL">https://www.google.com/maps?client=firefox-b-d&amp;q=38.329990782307505,+23.336070776829448&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwil0O-2srv9AhUMjqQKHbn3AVwQ_AUoAnoECAEQBA</string>
    <string name="kesarianiURL">https://www.google.com/maps?client=firefox-b-d&amp;q=37.965796476805586,+23.757893708772837&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwi7kYXEsrv9AhUNwAIHHRgzBvcQ_AUoAnoECAEQBA</string>
    <string name="peiramthesallonikisURL">https://www.google.com/maps?client=firefox-b-d&amp;q=40.741117628421776,+22.936559696451045&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwjG44X2srv9AhWZ_7sIHZsdD4wQ_AUoAnoECAIQBA</string>
    <string name="nigritasURL">https://www.google.com/maps/place/%CE%95%CE%A0%CE%91%CE%9B+%CE%9D%CE%99%CE%93%CE%A1%CE%99%CE%A4%CE%91%CE%A3/@40.9086054,23.5008042,17z/data=!4m6!3m5!1s0x14a90ee7c717659b:0xc23b2b71043e8c83!8m2!3d40.9086054!4d23.5033899!16s%2Fg%2F11c5h3w8cq</string>
    <string name="home">Αρχική</string>
    <string name="info">Πληροφορίες</string>
    <string name="atalantiText">Το Επαγγελματικό Λύκειο (ΕΠΑ.Λ.) Αταλάντης είναι  το μοναδικό Επαγγελματικό Λύκειο της Περιοχής Λοκρίδας του Νομού Φθιώτιδας.
        Στο σχολείο κάθε χρόνο φοιτούν περίπου 190  μαθητές οι οποίοι προέρχονται από τους Δήμους Λοκρών,  Αμφίκλειας – Ελάτειας και Καμένων Βούρλων.
        Στο σχολείο υπηρετούν 34 εκπαιδευτικοί. Παρέχει στους μαθητές που ολοκληρώνουν με επιτυχία τις σπουδές τους Απολυτήριο Λυκείου και Πτυχίο Ειδικότητας.
        \n\nΣτο σχολείο είναι εγκεκριμένοι και λειτουργούν   στη  Β΄ τάξη 5  τομείς:
        \n⚫ Γεωπονίας Τροφίμων και Περιβάλλοντος,
        \n⚫ Διοίκησης – Οικονομίας,
        \n⚫ Ηλεκτρολογίας – Ηλεκτρονικής και Αυτοματισμού,
        \n⚫ Μηχανολογίας
        \n⚫ Πληροφορικής
        \n\nΣτην Γ΄ τάξη λειτουργούν οι αντίστοιχες  Ειδικότητες:
        \n⚫ Τεχνικός Φυτικής Παραγωγής
        \n⚫ Τεχνικός Τεχνολογίας Τροφίμων και Ποτών
        \n⚫ Υπάλληλος Διοίκησης και Οικονομικών Υπηρεσιών
        \n⚫ Τεχνικός Ηλεκτρολογικών Συστημάτων
        \n⚫ Εγκαταστάσεων και Δικτύων
        \n⚫ Τεχνικός Οχημάτων
        \n⚫ Tεχνικός Εγκαταστάσεων Ψύξης Αερισμού και Κλιματισμού
        \n⚫ Τεχνικός Ηλεκτρονικών Υπολογιστών  και Δικτύων Η/Υ.
        \n\nΟι μαθητές έχουν την δυνατότητα να συμμετάσχουν στις Πανελλαδικές Εξετάσεις για την εισαγωγή στην Τριτοβάθμια Εκπαίδευση και να συνεχίσουν περαιτέρω τις σπουδές τους. Μπορούν επίσης να εισαχθούν στις Στρατιωτικές σχολές Υπαξιωματικών των ενόπλων δυνάμεων, στην Πυροσβεστική, την Αστυνομία το Λιμενικό στο Εμπορικό Ναυτικό και στη Γυμναστική Ακαδημία. Επίσης, μπορούν με το Απολυτήριό τους να εγγραφούν σε δημόσια ή ιδιωτικά ΙΕΚ της επιλογής τους. Και βέβαια όσοι επιθυμούν συνεχίζουν στο Μεταλυκειακό έτος Τάξη Μαθητείας.
        Στο σχολείο διεξάγονται ένα μεγάλο εύρος από μαθήματα γενική παιδείας, μαθήματα ειδικότητας και εργαστήρια, ενώ παράλληλα στα πλαίσια του εκπαιδευτικού και κοινωνικού του έργου συμμετέχει σε Ευρωπαϊκά, Περιβαλλοντικά, Πολιτιστικά και Προγράμματα Αγωγή Υγείας.
        Οι εκπαιδευτικοί μέσα από την διδακτική διαδικασία αλλά και την συμμετοχή τους σε δράσεις εντός και εκτός σχολείου προάγουν την κοινωνικοποίηση των μαθητών, τις ηθικές αξίες, την διεθνοποίηση του σχολείου, τις νέες τεχνολογίες, την καινοτομία και τον πολιτισμό.
    </string>
    <string name="peiramatikoThessalonikiText">Το εκπαιδευτικό πρόγραμμα “Ακραία Καιρικά Φαινόμενα: Ενημέρωση, Εκπαίδευση και Προστασία” υλοποιείται κατά τη διάρκεια των τριών τελευταίων σχολικών ετών (2020-21, 2021-22, 2022-23), από το Πειραματικό Σχολείο του Πανεπιστημίου Θεσσαλονίκης, με την επιστημονική υποστήριξη του Τομέα Μετεωρολογίας και Κλιματολογίας του Τμήματος Γεωλογίας του ΑΠΘ, με επιστημονική υπεύθυνη την κ. Κωνσταντία Τολίκα.
    Το πρόγραμμα συντονίζουν οι εκπαιδευτικοί Φίλιππος Κουτσάκας και Εμμανουήλ Κοσμιδης και συμμετέχουν έντεκα συνολικά εκπαιδευτικοί όλων του βαθμίδων του σχολείου μας.

    \n\nΣτόχοι του προγράμματος είναι:
    \n1. η μελέτη των περιβαλλοντικών διαστάσεων και των πιθανών επιπτώσεων της κλιματικής αλλαγής λόγω της έντασης του φαινομένου του θερμοκηπίου
    \n2. η αναζήτηση τρόπων παρακολούθησης, αναγνώρισης, εντοπισμού καθώς και μέτρων για την έγκαιρη προειδοποίηση (risk alert system) και προστασία από τα έντονα καιρικά φαινόμενα με την αξιοποίηση τεχνολογιών ανοιχτής αρχιτεκτονικής καθώς και ελεύθερου λογισμικού / λογισμικού ανοιχτού κώδικα
    \n3. η συστηματική συλλογή, οργάνωση και διάθεση ανοιχτών συνόλων (data sets) πρωτογενών μετεωρολογικών δεδομένων
    \n\nΜεταξύ των παραδοτέων του εκπαιδευτικού προγράμματος είναι:
    \n1. ένας μετεωρολογικός σταθμός τοποθετημένος στην αυλή του σχολείου μας που βασίζεται σε τεχνολογίες ανοιχτής αρχιτεκτονικής
    \n2. ιστοσελίδα ανάρτησης ανοιχτών μετεωρολογικών δεδομένων σε πραγματικό χρόνο
    \n3. διδακτικά σενάρια για τα μαθήματα της πληροφορικής, της φυσικής, της γεωγραφίας και των μαθητικών Γυμνασίου, της γλώσσας, της μελέτης περιβάλλοντος δημοτικού
    \n4. εισηγήσεις και επιστημονικά συνέδρια και μαθητικούς διαγωνισμούς
    \n\nΑναλυτικές πληροφορίες για το εκπαιδευτικό πρόγραμμα "Ακραία Καιρικά Φαινόμενα: Ενημέρωση, εκπαίδευσης και προστασία" θα βρείτε στον συνδεσμο https://pspth.edu.gr/akraia-kairika-fainomena/
    </string>
    <string name="dimhrakleioText">Το Φεβρουάριο του 2020, με πρωτοβουλία της Δντριας του Σχολείου μας Αικατερίνης Σταματοπούλου, εγκαταστάθηκε στο Σχολείο μας Μετεωρολογικός Σταθμός.
    Η αρχική ιδέα της εγκατάστασης ενός τέτοιου σταθμού στηρίχθηκε στην προηγούμενη εμπειρία της εγκατάστασης για ένα έτος στο Σχολείο μας από το τμήμα Χημείας του Παν/μίου Κρήτηςκαι του Εργαστηρίου Περιβαλλοντικής Χημείας σταθμού μέτρησης μικροσκοπικών ρύπων.
    \\nΗ ερευνητική δράση στάθηκε ερέθισμα για την εκπόνηση εκπαιδευτικού προγράμματος στο Σχολείο με θέμα: "Οι ατμοσφαιρικοί ρύποι και η επίδρασή τους στην υγεία και τα μνημεία" για την ΣΤ τάξη. Οι μαθητές μου -ανάμεσα στ άλλα- παρακολούθησαν ομιλία στην Ιατρική Σχολή Κρήτης και πραγματοποίησαν επίσκεψη στο Εργαστήριο Περιβαλλοντικής Χημείας. Αναδύθηκε ιδέα μιας διαρκούς μορφωτικής εμπειρίας και μιας μόνιμης ερευνητικής συνθήκης στο χώρο του Σχολείου. H ιδέα υλοποιήθηκε και προέκυψε η σταθερή συνθήκη του μετεωρολογικού
    Σταθμού του Σχολείου μας με την καθοριστική συνδρομή του Δρος Χρηστάκη Νίκου, Ερευνητή του Εργαστηρίου Εφαρμοσμένων Μαθηματικών του
    \\nΤμήματος  Μαθηματικών και Εφαρμοσμένων Μαθηματικών της  Μαθηματικής Σχολής του  Παν/μιου Κρήτης. Ο Δρ. Χρηστάκης είναι ο Υπεύθυνος της Μετεωρολογικής Ομάδας Αίολος ,που εγκατέστησε το σταθμό στο Σχολείο μας.
    Την εγκατάσταση συνόδευσαν εκπαιδευτικές δράσεις (διάλεξη και συμμετοχή μαθητών σε μικρές πειραματικές διατάξεις και παρατηρήσεις). Η επιστημονική του καθοδήγηση είναι διαρκής.
    \\nΕίναι πλέον εφικτή η με την εκπαιδευτική καθοδήγηση του συναδέλφου Υποδιευθυντή, Ταμιωλάκη Γιώργου- με το ιδιαίτερο ενδιαφέρον για τα μαθηματικά και τα φυσικά φαινόμενα- εισαγωγή  των μαθητών του της ΣΤ στην παρατήρηση και μελέτη των μετεωρολογικών  φαινομένων και συνθηκών.
    </string>
    <string name="btns_header">Σχολεία δικτύου Μετεωρολογικών \nσταθμών</string>
    <string name="home_header">Διαδραστικός χάρτης \nδικτύου</string>
</resources>