<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_second"
    android:scrollbarThumbHorizontal="@color/chalkboard_color"
    android:scrollbarThumbVertical="@color/chalkboard_color">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/chalkboard_color"
        android:text="@string/home_header"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/scroll"
        android:layout_below="@id/headerText"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="parent">

        <org.osmdroid.views.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/schools_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/scroll"
        android:layout_marginBottom="10dp"
        android:text="@string/btns_header"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@id/scroll"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_above="@id/bottom_navigation"
        android:background="@color/dark_second">

        <LinearLayout
            android:id="@+id/firstLinear"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/buttonKriti"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:height="50dp"
                    android:background="@color/chalkboard_color"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher_background"
                    android:text="@string/dimhrakleio"
                    android:textColor="@color/primary_text"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:id="@+id/buttonThessaloniki"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/chalkboard_color"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher_background"
                    android:text="@string/peiramthesallonikis"
                    android:textColor="@color/primary_text"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/buttonThiba"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/chalkboard_color"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher_background"
                    android:text="@string/thiba"
                    android:textColor="@color/primary_text"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/buttonKesariani"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/chalkboard_color"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher_background"
                    android:text="@string/kesariani"
                    android:textColor="@color/primary_text"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/buttonAtalanti"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/chalkboard_color"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher_background"
                    android:text="@string/atalanti"
                    android:textColor="@color/primary_text"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/buttonKarpenisi"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/chalkboard_color"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher_background"
                    android:text="@string/karpenisi"
                    android:textColor="@color/primary_text"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/buttonKaristos"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/chalkboard_color"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher_background"
                    android:text="@string/karistos"
                    android:textColor="@color/primary_text" />

                <Button
                    android:id="@+id/buttonKerkira"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/chalkboard_color"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher_background"
                    android:text="@string/kerkira"
                    android:textColor="@color/primary_text"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/buttonLamia"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/chalkboard_color"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher_background"
                    android:text="@string/lamia"
                    android:textColor="@color/primary_text"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/buttonMarakomi"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/chalkboard_color"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher_background"
                    android:text="@string/makrakomi"
                    android:textColor="@color/primary_text"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/buttonXalkida"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/chalkboard_color"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher_background"
                    android:text="@string/xalkida"
                    android:textColor="@color/primary_text"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/buttonDionisos"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/chalkboard_color"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher_background"
                    android:text="@string/dionisos"
                    android:textColor="@color/primary_text" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/chalkboard_color"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>